--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "codemirror": "^6.0.1",
     "element-plus": "^2.7.4",
     "normalize.css": "^8.0.1",
+    "pinia": "^2.1.7",
     "vue": "^3.4.27",
-    "vue-draggable-plus": "^0.5.0"
+    "vue-draggable-plus": "^0.5.0",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
