--- a/package.json
+++ b/package.json
@@ -12,32 +12,37 @@
   },
   "dependencies": {
     "@codemirror/state": "^6.4.1",
-    "@codemirror/view": "^6.27.0",
+    "@codemirror/view": "^6.29.1",
+    "axios": "^1.7.3",
     "codemirror": "^6.0.1",
-    "dayjs": "^1.11.11",
-    "element-plus": "^2.7.4",
+    "dayjs": "^1.11.12",
+    "element-plus": "^2.7.8",
+    "lodash-es": "^4.17.21",
     "normalize.css": "^8.0.1",
-    "pinia": "^2.1.7",
-    "vue": "^3.4.27",
-    "vue-draggable-plus": "^0.5.0",
-    "vue-router": "^4.3.2"
+    "pinia": "^2.2.0",
+    "qs": "^6.13.0",
+    "vue": "^3.4.35",
+    "vue-draggable-plus": "^0.5.2",
+    "vue-router": "^4.4.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.4.0",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "eslint": "^9.4.0",
+    "@eslint/js": "^9.8.0",
+    "@types/qs": "^6.9.15",
+    "@vitejs/plugin-vue": "^5.1.2",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.26.0",
-    "globals": "^15.4.0",
-    "prettier": "^3.3.1",
-    "sass": "^1.77.4",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.12.0",
-    "vite": "^5.2.12",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.27.0",
+    "globals": "^15.9.0",
+    "prettier": "^3.3.3",
+    "sass": "^1.77.8",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^7.18.0",
+    "vite": "^5.3.5",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-virtual-mpa": "^1.11.0",
+    "vite-plugin-virtual-mpa": "^1.12.0",
     "vue-eslint-parser": "^9.4.3",
-    "vue-tsc": "^2.0.19"
+    "vue-tsc": "^2.0.29"
   }
 }
