--- a/package.json
+++ b/package.json
@@ -8,27 +8,28 @@
     "build": "vue-tsc && vite build --mode production",
     "build:test": "vite build --mode test",
     "preview": "vite preview",
-    "lint": "eslint src --fix"
+    "lint": "eslint src --fix",
+    "lint:style": "stylelint **/*.{vue,css,scss} --fix"
   },
   "dependencies": {
-    "@codemirror/state": "^6.4.1",
-    "@codemirror/view": "^6.30.0",
-    "@vueuse/core": "^10.11.0",
-    "axios": "^1.7.3",
-    "codemirror": "^6.0.1",
-    "dayjs": "^1.11.12",
-    "element-plus": "^2.7.8",
+    "@tsparticles/configs": "^3.5.0",
+    "@tsparticles/slim": "^3.5.0",
+    "@tsparticles/vue3": "^3.0.1",
+    "@vueuse/core": "^10.11.1",
+    "axios": "^1.7.5",
+    "dayjs": "^1.11.13",
+    "element-plus": "^2.8.1",
     "lodash-es": "^4.17.21",
     "normalize.css": "^8.0.1",
-    "pinia": "^2.2.0",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.2.2",
     "qs": "^6.13.0",
-    "vue": "^3.4.35",
+    "vue": "^3.4.38",
     "vue-draggable-plus": "^0.5.3",
-    "vue-router": "^4.4.2"
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "@types/qs": "^6.9.15",
+    "@eslint/js": "^9.9.1",
     "@vitejs/plugin-vue": "^5.1.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -36,14 +37,22 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.27.0",
     "globals": "^15.9.0",
+    "meow": "^9.0.0",
     "prettier": "^3.3.3",
     "sass": "^1.77.8",
+    "stylelint": "^16.9.0",
+    "stylelint-config-recess-order": "^5.1.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^7.18.0",
-    "vite": "^5.3.5",
+    "typescript-eslint": "^8.3.0",
+    "unplugin-auto-import": "^0.18.2",
+    "vite": "^5.4.2",
+    "vite-plugin-checker": "^0.7.2",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-virtual-mpa": "^1.12.0",
+    "vite-plugin-virtual-mpa": "^1.12.1",
     "vue-eslint-parser": "^9.4.3",
-    "vue-tsc": "^2.0.29"
+    "vue-tsc": "^2.1.0"
   }
 }
