--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
+    "@eslint/js": "^8.57.0",
     "@vitejs/plugin-vue": "^5.1.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -38,6 +38,7 @@
     "eslint-plugin-vue": "^9.27.0",
     "globals": "^15.9.0",
     "meow": "^9.0.0",
+    "postcss-preset-env": "^10.0.2",
     "prettier": "^3.3.3",
     "sass": "^1.77.8",
     "stylelint": "^16.9.0",
@@ -45,6 +46,7 @@
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-config-standard-scss": "^13.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.3.0",
     "unplugin-auto-import": "^0.18.2",
