工程结构变更

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "globals": "^15.9.0",
     "meow": "^9.0.0",
     "postcss-preset-env": "^10.0.2",
+    "postcss-pxtorem": "^6.1.0",
     "prettier": "^3.3.3",
     "sass": "^1.77.8",
     "stylelint": "^16.9.0",
