--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
+    "strict": true,
     "composite": true,
-    "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "strict": true
+    "moduleResolution": "Node",
+    "allowSyntheticDefaultImports": true
   },
   "include": ["vite.config.ts", "config/**/*.ts"]
 }
