--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@primevue/themes": "^4.1.1",
     "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
@@ -22,6 +23,7 @@
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.2.4",
+    "primevue": "^4.1.1",
     "qs": "^6.13.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
@@ -51,6 +53,7 @@
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.1",
     "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.10",
     "vite-plugin-checker": "^0.8.0",
     "vite-plugin-compression": "^0.5.1",
