--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@iconify/json": "^2.2.265",
     "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
@@ -51,6 +53,7 @@
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.1",
     "unplugin-auto-import": "^0.18.3",
+    "unplugin-icons": "^0.19.3",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.10",
     "vite-plugin-checker": "^0.8.0",
