--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vue-tsc && npm run lint && npm run lint:style && vite build",
     "build:test": "vite build --mode test",
     "build:production": "npm run build --mode production",
-    "build:preview": "vite preview",
+    "build:preview": "vite build && vite preview",
     "lint": "eslint src --fix",
     "lint:style": "stylelint **/*.{vue,css,scss} --fix",
     "prepare": "husky"
@@ -30,7 +30,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@iconify/vue": "^4.1.2",
     "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
@@ -53,11 +55,11 @@
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.1",
     "unplugin-auto-import": "^0.18.3",
-    "unplugin-icons": "^0.19.3",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.10",
     "vite-plugin-checker": "^0.8.0",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-require-transform": "^1.0.21",
     "vite-plugin-virtual-mpa": "^1.12.1",
     "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.1.8"
@@ -66,10 +68,10 @@
     "node": ">= 20"
   },
   "lint-staged": {
-    "src/**/*.{vue,js,ts,jsx,tsx,json}": [
+    "*.{vue,ts,jsx,tsx,js}": [
       "npm run lint"
     ],
-    "src/**/*.{vue,css,scss}": [
+    "*.{vue,css,scss}": [
       "npm run lint:style"
     ]
   },
