--- a/package.json
+++ b/package.json
@@ -15,45 +15,45 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@iconify/json": "^2.2.265",
-    "@vueuse/core": "^11.1.0",
+    "@iconify/json": "^2.2.268",
+    "@vueuse/core": "^11.2.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
-    "element-plus": "^2.8.6",
+    "element-plus": "https://pkg.pr.new/element-plus/element-plus@70b5d4f",
     "lodash-es": "^4.17.21",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
-    "pinia": "^2.2.4",
+    "pinia": "^2.2.6",
     "qs": "^6.13.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
+    "@eslint/js": "^9.14.0",
     "@iconify/vue": "^4.1.2",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
-    "eslint": "^9.13.0",
+    "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.30.0",
-    "globals": "^15.11.0",
+    "globals": "^15.12.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "meow": "^9.0.0",
     "postcss": "^8.4.47",
-    "postcss-preset-env": "^10.0.8",
+    "postcss-preset-env": "^10.0.9",
     "postcss-pxtorem": "^6.1.0",
     "prettier": "^3.3.3",
-    "sass": "^1.79.6",
+    "sass": "^1.80.6",
     "stylelint": "^16.10.0",
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.12.1",
+    "typescript-eslint": "^8.13.0",
     "unplugin-auto-import": "^0.18.3",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.10",
@@ -62,7 +62,7 @@
     "vite-plugin-require-transform": "^1.0.21",
     "vite-plugin-virtual-mpa": "^1.12.1",
     "vue-eslint-parser": "^9.4.3",
-    "vue-tsc": "^2.1.8"
+    "vue-tsc": "^2.1.10"
   },
   "engines": {
     "node": ">= 20"
