--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.2.6",
+    "pinia-plugin-persistedstate": "^4.1.3",
     "qs": "^6.13.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
