--- a/package.json
+++ b/package.json
@@ -72,15 +72,15 @@
     "pnpm": ">=9.12.0"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
+    "*.{js,jsx,ts,tsx}": [
       "prettier --cache --ignore-unknown  --write",
       "eslint --cache --cache-location node_modules/.cache/.eslintcache --fix"
     ],
-    "src/**/*.{scss,html,vue,css}": [
+    "*.{scss,html,vue,css}": [
       "prettier --cache --ignore-unknown --write",
       "stylelint --fix --allow-empty-input"
     ],
-    "src/**/*.vue": [
+    "*.vue": [
       "prettier --cache --write",
       "eslint --cache --cache-location node_modules/.cache/.eslintcache --fix",
       "stylelint --fix --allow-empty-input"
