--- a/package.json
+++ b/package.json
@@ -18,6 +18,16 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@iconify/json": "^2.2.270",
     "@vueuse/core": "^11.2.0",
+    "@xterm/addon-attach": "^0.11.0",
+    "@xterm/addon-clipboard": "^0.1.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-image": "^0.8.0",
+    "@xterm/addon-search": "^0.15.0",
+    "@xterm/addon-serialize": "^0.13.0",
+    "@xterm/addon-unicode11": "^0.8.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/addon-webgl": "^0.18.0",
+    "@xterm/xterm": "^5.5.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "element-plus": "https://pkg.pr.new/element-plus/element-plus@70b5d4f",
