--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && npm run lint && npm run lint:style && vite build",
+    "build": "vue-tsc -b && npm run lint && npm run lint:style && vite build",
     "build:test": "vite build --mode test",
     "build:production": "npm run build --mode production",
     "build:preview": "vite build && vite preview",
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@iconify/json": "^2.2.270",
+    "@iconify/json": "^2.2.272",
     "@vueuse/core": "^11.2.0",
     "@xterm/addon-attach": "^0.11.0",
     "@xterm/addon-clipboard": "^0.1.0",
@@ -44,7 +44,7 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@iconify/vue": "^4.1.2",
-    "@vitejs/plugin-vue": "^5.1.5",
+    "@vitejs/plugin-vue": "^5.2.0",
     "@vitejs/plugin-vue-jsx": "^4.1.0",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
@@ -54,12 +54,12 @@
     "globals": "^15.12.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
-    "meow": "^9.0.0",
+    "meow": "9.0.0",
     "postcss": "^8.4.49",
     "postcss-preset-env": "^10.1.0",
     "postcss-pxtorem": "^6.1.0",
     "prettier": "^3.3.3",
-    "sass": "^1.80.6",
+    "sass": "^1.81.0",
     "stylelint": "^16.10.0",
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-recommended-vue": "^1.5.0",
@@ -67,7 +67,7 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.14.0",
-    "unplugin-auto-import": "^0.18.3",
+    "unplugin-auto-import": "^0.18.4",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.11",
     "vite-plugin-checker": "^0.8.0",
