--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@iconify/json": "^2.2.272",
+    "@iconify/json": "^2.2.273",
     "@vueuse/core": "^11.2.0",
     "@xterm/addon-attach": "^0.11.0",
     "@xterm/addon-clipboard": "^0.1.0",
@@ -30,7 +30,7 @@
     "@xterm/xterm": "^5.5.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
-    "element-plus": "https://pkg.pr.new/element-plus/element-plus@70b5d4f",
+    "element-plus": "^2.8.8",
     "lodash-es": "^4.17.21",
     "lunar-javascript": "^1.6.13",
     "normalize.css": "^8.0.1",
@@ -38,11 +38,11 @@
     "pinia": "^2.2.6",
     "pinia-plugin-persistedstate": "^4.1.3",
     "qs": "^6.13.0",
-    "vue": "^3.5.12",
+    "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
+    "@eslint/js": "^9.15.0",
     "@iconify/vue": "^4.1.2",
     "@vitejs/plugin-vue": "^5.2.0",
     "@vitejs/plugin-vue-jsx": "^4.1.0",
