--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-require-transform": "^1.0.21",
     "vite-plugin-virtual-mpa": "^1.12.1",
+    "vite-plugin-vue-devtools": "^7.6.4",
     "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.1.10"
   },
