--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@iconify/vue": "^4.1.2",
+    "@unocss/eslint-config": "^0.64.1",
+    "@unocss/preset-uno": "^0.64.1",
     "@vitejs/plugin-vue": "^5.2.0",
     "@vitejs/plugin-vue-jsx": "^4.1.0",
     "eslint": "^9.15.0",
@@ -67,6 +69,7 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.15.0",
+    "unocss": "^0.64.1",
     "unplugin-auto-import": "^0.18.5",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.11",
