更新项目配置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,7 @@
   "stylelint.validate": ["vue", "css", "scss"],
 
   "vue.server.hybridMode": true,
-  "vue.codeLens.enabled": false
+  "vue.codeLens.enabled": false,
+
+  "unocss.autocomplete.matchType": "fuzzy"
 }
