更新项目配置

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       # 生成静态文件
       - name: Build
         run: |
-          npm i pnpm
+          npm i pnpm -g
           pnpm i  # 安装依赖
           pnpm build:production  # 执行打包
 
@@ -26,6 +26,6 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          ACCESS_TOKEN: ${{ secrets.PRODUCTION_HUB_PAGE }} # 也就是我们刚才生成的 secret
-          BRANCH: gh-pages # 部署到 gh-pages 分支，因为 main 分支存放的一般是源码，而 gh-pages 分支则用来存放生成的静态文件
+          ACCESS_TOKEN: ${{ secrets.PRODUCTION_HUB_PAGE }}
+          BRANCH: gh-pages # 部署到 gh-pages 分支
           FOLDER: docs-dist # 生成的静态文件存放的地方
