--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build-and-deploy:
     # 服务器环境：最新版 Ubuntu
-    runs-on: node-22
+    runs-on: ubuntu-latest
     steps:
       # 拉取代码
       - name: Checkout
