--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,22 +7,23 @@ on:
 
 jobs:
   build-and-deploy:
-    # 服务器环境：最新版 Ubuntu
     runs-on: ubuntu-latest
     steps:
-      # 拉取代码
       - name: Checkout
         uses: actions/checkout@v4
         with:
           persist-credentials: false
-      # 生成静态文件
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+
       - name: Build
         run: |
-          npm i pnpm -g && pnpm i # 安装依赖
-          pnpm dev
-          pnpm build:production  # 执行打包
+          npm i pnpm -g && pnpm i
+          pnpm build:production
 
-      # 部署到 GitHub Pages
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
