更新项目配置

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages # 部署到 gh-pages 分支
-          FOLDER: docs-dist # 生成的静态文件存放的地方
+          token: ${{ secrets.ACCESS_TOKEN }}
+          branch: gh-pages # 部署到 gh-pages 分支
+          folder: dist # 生成的静态文件存放的地方
