--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
-          branch: gh-pages # 部署到 gh-pages 分支
-          folder: dist # 生成的静态文件存放的地方
+          branch: gh-pages
+          folder: .
