--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite serve",
     "build": "vue-tsc -b && pnpm lint && pnpm lint:style && vite build",
     "build:test": "pnpm build -- --mode test",
     "build:production": "pnpm build -- --mode production",
