--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@iconify/json": "^2.2.278",
-    "@vueuse/core": "^11.3.0",
+    "@vueuse/core": "^12.0.0",
     "@xterm/addon-attach": "^0.11.0",
     "@xterm/addon-clipboard": "^0.1.0",
     "@xterm/addon-fit": "^0.10.0",
@@ -44,8 +44,9 @@
   "devDependencies": {
     "@eslint/js": "^9.16.0",
     "@iconify/vue": "^4.1.2",
-    "@unocss/eslint-config": "^0.64.1",
-    "@unocss/preset-uno": "^0.64.1",
+    "@types/node": "^22.10.1",
+    "@unocss/eslint-config": "0.65.0-beta.3",
+    "@unocss/preset-uno": "0.65.0-beta.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "commander": "^12.1.0",
@@ -67,13 +68,13 @@
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.1",
-    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-config-standard-scss": "^14.0.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.16.0",
-    "unocss": "^0.64.1",
+    "unocss": "0.65.0-beta.3",
     "unplugin-auto-import": "^0.18.6",
     "unplugin-vue-components": "^0.27.5",
-    "vite": "^5.4.11",
+    "vite": "^6.0.1",
     "vite-plugin-checker": "^0.8.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-require-transform": "^1.0.21",
