--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
     "@eslint/js": "^9.16.0",
     "@iconify/vue": "^4.1.2",
     "@types/node": "^22.10.1",
-    "@unocss/eslint-config": "0.65.0-beta.3",
-    "@unocss/preset-uno": "0.65.0-beta.3",
+    "@unocss/eslint-config": "0.65.0",
+    "@unocss/preset-rem-to-px": "^0.65.0",
+    "@unocss/preset-uno": "0.65.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "commander": "^12.1.0",
@@ -63,7 +64,7 @@
     "postcss-preset-env": "^10.1.1",
     "postcss-pxtorem": "^6.1.0",
     "prettier": "^3.4.1",
-    "sass": "^1.81.0",
+    "sass": "^1.81.1",
     "stylelint": "^16.11.0",
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-recommended-vue": "^1.5.0",
@@ -71,7 +72,7 @@
     "stylelint-config-standard-scss": "^14.0.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.17.0",
-    "unocss": "0.65.0-beta.3",
+    "unocss": "0.65.0",
     "unplugin-auto-import": "^0.18.6",
     "unplugin-vue-components": "^0.27.5",
     "vite": "^6.0.2",
