--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   },
   "css.validate": false,
   "scss.validate": false,
-  "stylelint.validate": ["vue", "css", "scss"]
+  "stylelint.validate": ["vue", "css", "scss"],
+  "vue.codeActions.askNewComponentName": false
 }
