--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   "devDependencies": {
     "@eslint/js": "^9.16.0",
     "@iconify/vue": "^4.2.0",
-    "@types/node": "^22.10.1",
+    "@tailwindcss/vite": "4.0.0-beta.6",
+    "@types/node": "^22.10.2",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "commander": "^12.1.0",
@@ -54,10 +55,9 @@
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.13.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.2.10",
+    "lint-staged": "^15.2.11",
     "meow": "9.0.0",
     "postcss": "^8.4.49",
-    "postcss-import": "^16.1.0",
     "postcss-preset-env": "^10.1.1",
     "postcss-pxtorem": "^6.1.0",
     "prettier": "^3.4.2",
@@ -68,16 +68,16 @@
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-config-standard-scss": "^14.0.0",
-    "tailwindcss": "^3.4.16",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.17.0",
+    "tailwindcss": "4.0.0-beta.6",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.0",
     "unplugin-auto-import": "^0.18.6",
     "unplugin-vue-components": "^0.27.5",
     "vite": "^6.0.3",
     "vite-plugin-checker": "^0.8.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-virtual-mpa": "^1.12.1",
-    "vite-plugin-vue-devtools": "^7.6.7",
+    "vite-plugin-vue-devtools": "^7.6.8",
     "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.1.10"
   },
