--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "element-plus": "^2.9.1",
     "lodash-es": "^4.17.21",
     "lunar-javascript": "^1.6.13",
-    "normalize.css": "^8.0.1",
+    "modern-normalize": "^3.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.3.0",
-    "pinia-plugin-persistedstate": "^4.1.3",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "qs": "^6.13.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -70,7 +70,7 @@
     "stylelint-config-standard-scss": "^14.0.0",
     "tailwindcss": "4.0.0-beta.6",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.0",
+    "typescript-eslint": "^8.18.1",
     "unplugin-auto-import": "^0.19.0",
     "unplugin-vue-components": "^0.28.0",
     "vite": "^6.0.3",
