--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@vueuse/core": "^12.4.0",
+    "@vueuse/core": "^12.5.0",
     "@xterm/addon-attach": "^0.11.0",
     "@xterm/addon-clipboard": "^0.1.0",
     "@xterm/addon-fit": "^0.10.0",
@@ -34,49 +34,49 @@
     "lunar-javascript": "^1.6.13",
     "modern-normalize": "^3.0.1",
     "nprogress": "^0.2.0",
-    "pinia": "^2.3.0",
+    "pinia": "^2.3.1",
     "pinia-plugin-persistedstate": "^4.2.0",
-    "qs": "^6.13.1",
+    "qs": "^6.14.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
+    "@eslint/js": "^9.19.0",
     "@iconify/vue": "^4.3.0",
-    "@tailwindcss/vite": "4.0.0-beta.9",
-    "@types/node": "^22.10.6",
+    "@tailwindcss/vite": "^4.0.3",
+    "@types/node": "^22.13.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "commander": "^13.0.0",
-    "eslint": "^9.18.0",
+    "commander": "^13.1.0",
+    "eslint": "^9.19.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.3.0",
+    "lint-staged": "^15.4.3",
     "meow": "9.0.0",
-    "postcss": "^8.5.0",
+    "postcss": "^8.5.1",
     "postcss-preset-env": "^10.1.3",
     "postcss-pxtorem": "^6.1.0",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "sass": "^1.83.3",
-    "stylelint": "^16.13.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "sass": "^1.84.0",
+    "stylelint": "^16.14.1",
     "stylelint-config-recess-order": "^5.1.1",
-    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-recommended-vue": "^1.6.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-config-standard-scss": "^14.0.0",
-    "tailwindcss": "4.0.0-beta.9",
+    "tailwindcss": "^4.0.3",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0",
+    "typescript-eslint": "^8.23.0",
     "unplugin-auto-import": "^0.19.0",
     "unplugin-vue-components": "^0.28.0",
-    "vite": "^6.0.7",
+    "vite": "^6.1.0",
     "vite-plugin-checker": "^0.8.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-virtual-mpa": "^1.12.1",
-    "vite-plugin-vue-devtools": "^7.7.0",
+    "vite-plugin-vue-devtools": "^7.7.1",
     "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.2.0"
   },
